# SalesOutreachAutomation

./: README.md  pyproject.toml
src/baseone_agents/: main.py
src/baseone_agents/crews/analyst_crew/: analyst_crew.py
src/baseone_agents/crews/analyst_crew/config/: agents.yaml  tasks.yaml
src/baseone_agents/crews/email_crew/: email_crew.py
src/baseone_agents/crews/email_crew/config/: agents.yaml  tasks.yaml
src/baseone_agents/tools/: custom_tool.py
